nodejs_manifests/test-k8s-app/overlays/dev/node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-host-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-ingress-class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - itiproject.zapto.org
      secretName: myapp-tls  
  rules:
    - host: itiproject.zapto.org
      http:
        paths:
          - path: /.well-known/acme-challenge/*
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-controller
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app
                port:
                  number: 80
